--- a/project.html
+++ b/project.html
@@ -9,32 +9,47 @@
   <body>
     <header>
       <nav class="navigation-bar">
-        <ul>
+        <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
           <li><a href="project.html">Project</a></li>
-          
+
           <li><a href="contact.html">Contact</a></li>
           <li><a href="resume.html">Resume</a></li>
         </ul>
       </nav>
     </header>
     <main class="project-main">
-        <section class="my-project">
-            <h1>My Projects</h1>
-            <article class="project-card">
-              <p>Name</p>
-              <p>Description</p>
-              <p>Status</p>
-              <img src="#" alt="project-img" />
-              <button>See Website</button>
-            </article>
+      <section class="my-project">
+        <h1>My Projects</h1>
+        <article class="project-card">
+          <p>Big Lemon Restaurant</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+            faucibus mattis magna a volutpat. Aenean ultrices nisi sit amet enim
+            hendrerit, maximus suscipit diam rutrum. Proin lacus nunc, imperdiet
+            sit amet suscipit id, gravida blandit nibh. Proin ut felis et massa
+            fermentum ultricies. Sed dictum nisl sit amet diam commodo commodo.
+            Donec nec ante nunc. Curabitur eu molestie mi, et eleifend nisi.
+            Proin consequat tellus vitae augue tincidunt hendrerit. Fusce
+            porttitor dignissim risus, vel tincidunt lectus accumsan eu. Aenean
+            .
+          </p>
+          <p>Incomplete</p>
+          <img
+            src="images/big_lemon.png"
+            alt="project-img"
+            style="width: 500px; height: auto"
+          />
+          <button src="#">Project on Github</button>
+        </article>
+      </section>
     </main>
     <footer>
-      <nav class="footer-nav">
-        <ul>
+      <nav class="navigation-bar">
+        <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
           <li><a href="project.html">Project</a></li>
-          
+
           <li><a href="contact.html">Contact</a></li>
           <li><a href="resume.html">Resume</a></li>
         </ul>
