--- a/resume.html
+++ b/resume.html
@@ -10,7 +10,7 @@
     <!-- Navbar Section -->
     <header>
       <nav class="navigation-bar">
-        <ul>
+        <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
           <li><a href="project.html">Projects</a></li>
           <li><a href="resume.html">Resume</a></li>
@@ -46,6 +46,27 @@
         </section>
 
         <hr />
+        <!-- certificate and projects -->
+        <!-- <section>
+          <h2>certificate and Projects</h2>
+
+          <table>
+            <thead>
+              <tr>
+                <th>Certificate / Project</th>
+                <th>Description</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>Meta frontend certificate</td>
+                <td>Learnt a lot about react, vanilla js etc</td>
+              </tr>
+            </tbody>
+          </table>
+        </section>
+
+        <hr />
 
         <section class="work-experience">
           <h2>Work Experience</h2>
@@ -75,6 +96,44 @@
               </tr>
             </tbody>
           </table>
+        </section> -->
+        <section class="certificates-projects">
+          <h2>Certificates and Projects</h2>
+          <div class="grid-container">
+            <div class="grid-item">
+              <h3>Meta Frontend Certificate</h3>
+              <p>Learnt a lot about React, Vanilla JS, etc.</p>
+            </div>
+            <!-- Add more certificates and projects as needed -->
+          </div>
+        </section>
+
+        <hr />
+
+        <section class="work-experience">
+          <h2>Work Experience</h2>
+          <div class="grid-container">
+            <div class="grid-item">
+              <h3>2022-</h3>
+              <p>Chef</p>
+              <p>Egon Restaurant</p>
+            </div>
+            <div class="grid-item">
+              <h3>2021-2022</h3>
+              <p>Assistant Head Chef</p>
+              <p>Egon Restaurant</p>
+            </div>
+            <div class="grid-item">
+              <h3>2020-2021</h3>
+              <p>First Chef</p>
+              <p>Egon Restaurant</p>
+            </div>
+            <div class="grid-item">
+              <h3>2017-2019</h3>
+              <p>Chef</p>
+              <p>Egon Restaurant</p>
+            </div>
+          </div>
         </section>
 
         <hr />
@@ -130,8 +189,8 @@
 
     <!-- Footer Section -->
     <footer>
-      <nav>
-        <ul>
+      <nav class="navigation-bar">
+        <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
           <li><a href="project.html">Projects</a></li>
           <li><a href="resume.html">Resume</a></li>
