styling and structure almost complete

--- a/project.html
+++ b/project.html
@@ -12,15 +12,13 @@
         <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
           <li><a href="project.html">Project</a></li>
-
           <li><a href="contact.html">Contact</a></li>
           <li><a href="resume.html">Resume</a></li>
         </ul>
-      </nav>
     </header>
     <main class="project-main">
+      <h1>My Projects</h1>
       <section class="my-project">
-        <h1>My Projects</h1>
         <article class="project-card">
           <p>Big Lemon Restaurant</p>
           <p>
@@ -29,30 +27,60 @@
             hendrerit, maximus suscipit diam rutrum. Proin lacus nunc, imperdiet
             sit amet suscipit id, gravida blandit nibh. Proin ut felis et massa
             fermentum ultricies. Sed dictum nisl sit amet diam commodo commodo.
-            Donec nec ante nunc. Curabitur eu molestie mi, et eleifend nisi.
-            Proin consequat tellus vitae augue tincidunt hendrerit. Fusce
-            porttitor dignissim risus, vel tincidunt lectus accumsan eu. Aenean
-            .
           </p>
           <p>Incomplete</p>
           <img
             src="images/big_lemon.png"
             alt="project-img"
-            style="width: 500px; height: auto"
+            style="width: 300px; height: auto"
           />
-          <button src="#">Project on Github</button>
+          <button src="#" class="button-dark" id="project-button">Project on Github</button>
+        </article>
+        <article class="project-card">
+          <p>Big Lemon Restaurant</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+            faucibus mattis magna a volutpat. Aenean ultrices nisi sit amet enim
+            hendrerit, maximus suscipit diam rutrum. Proin lacus nunc, imperdiet
+            sit amet suscipit id, gravida blandit nibh. Proin ut felis et massa
+            fermentum ultricies. Sed dictum nisl sit amet diam commodo commodo.
+          </p>
+          <p>Incomplete</p>
+          <img
+            src="images/big_lemon.png"
+            alt="project-img"
+            style="width: 300px; height: auto"
+          />
+          <button src="#" class="button-dark" id="project-button">Project on Github</button>
+        </article>
+        <article class="project-card">
+          <p>Big Lemon Restaurant</p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+            faucibus mattis magna a volutpat. Aenean ultrices nisi sit amet enim
+            hendrerit, maximus suscipit diam rutrum. Proin lacus nunc, imperdiet
+            sit amet suscipit id, gravida blandit nibh. Proin ut felis et massa
+            fermentum ultricies. Sed dictum nisl sit amet diam commodo commodo.
+          </p>
+          <p>Incomplete</p>
+          <img
+            src="images/big_lemon.png"
+            alt="project-img"
+            style="width: 300px; height: auto"
+          />
+          <button src="#" class="button-dark" id="project-button">Project on Github</button>
         </article>
       </section>
     </main>
     <footer>
       <nav class="navigation-bar">
-        <ul class="nav-list">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="project.html">Project</a></li>
-
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="resume.html">Resume</a></li>
-        </ul>
+        <nav class="navigation-bar">
+          <ul class="nav-list">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="project.html">Project</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="resume.html">Resume</a></li>
+          </ul>
       </nav>
     </footer>
 
