setting up backend

--- a/index.html
+++ b/index.html
@@ -10,51 +10,21 @@
     <header>
       <nav class="navigation-bar">
         <ul class="nav-list">
+          <li><a href="index.html">Musa Jalloh</a></li>
           <li><a href="index.html">Home</a></li>
           <li><a href="project.html">Project</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="resume.html">Resume</a></li>
         </ul>
       </nav>
+      <section>
+        <h1 class="project-section-h1">My Projects</h1>
+        <section class="grid-project-section">
+            <!-- Project cards will be inserted here -->
+        </section>
+        <a href="project.html"><button class="button-dark">See more projects</button></a>
+    </section>
 
-      <div class="hero-section-container">
-        <h2 class="hero-h2">Hi, I am Musa</h2>
-        <p class="hero-p">
-          I’m a third-year Information Systems student at HIØF with a passion
-          for web development and cybersecurity. Exploring the intersection of
-          technology and security, I strive to build secure and innovative
-          solutions for the digital world.
-        </p>
-      </div>
-    </header>
-
-    <main>
-        <section>
-          <h1 class="project-section-h1">My Projects</h1>
-          <section class="grid-project-section">
-              <article class="project-card">
-                  <h2 class="project-h2">Name: Big Lemon</h2>
-                  <p>Description: A restaurant booking system created in React</p>
-                  <p>Status: Incomplete</p>
-                  <img src="images/big_lemon.png" alt="project-img" class="portfolio-image" />
-              </article>
-              <article class="project-card">
-                <h2 class="project-h2">Name: Big Lemon</h2>
-                <p>Description: A restaurant booking system created in React</p>
-                <p>Status: Incomplete</p>
-                <img src="images/big_lemon.png" alt="project-img" class="portfolio-image" />
-            </article>
-            <article class="project-card">
-              <h2 class="project-h2">Name: Big Lemon</h2>
-              <p>Description: A restaurant booking system created in React</p>
-              <p>Status: Incomplete</p>
-              <img src="images/big_lemon.png" alt="project-img" class="portfolio-image" />
-          </article>
-              
-          </section>
-          <a href="project.html"><button class="button-dark" >See more projects</button></a>
-      </section>
-      
     <!-- Above done styling--------------------------------------------->
       </section>
       <section class="about-me-section">
@@ -168,6 +138,7 @@
     <footer>
       <nav class="navigation-bar">
         <ul class="nav-list">
+          <li><a href="index.html">Musa Jalloh</a></li>
           <li><a href="index.html">Home</a></li>
           <li><a href="project.html">Project</a></li>
           <li><a href="contact.html">Contact</a></li>
