--- a/project.html
+++ b/project.html
@@ -10,77 +10,29 @@
     <header>
       <nav class="navigation-bar">
         <ul class="nav-list">
+          <li><a href="index.html">Musa Jalloh</a></li>
           <li><a href="index.html">Home</a></li>
           <li><a href="project.html">Project</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li><a href="resume.html">Resume</a></li>
         </ul>
+      </nav>
     </header>
     <main class="project-main">
       <h1>My Projects</h1>
       <section class="my-project">
-        <article class="project-card">
-          <p>Big Lemon Restaurant</p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-            faucibus mattis magna a volutpat. Aenean ultrices nisi sit amet enim
-            hendrerit, maximus suscipit diam rutrum. Proin lacus nunc, imperdiet
-            sit amet suscipit id, gravida blandit nibh. Proin ut felis et massa
-            fermentum ultricies. Sed dictum nisl sit amet diam commodo commodo.
-          </p>
-          <p>Incomplete</p>
-          <img
-            src="images/big_lemon.png"
-            alt="project-img"
-            style="width: 300px; height: auto"
-          />
-          <button src="#" class="button-dark" id="project-button">Project on Github</button>
-        </article>
-        <article class="project-card">
-          <p>Big Lemon Restaurant</p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-            faucibus mattis magna a volutpat. Aenean ultrices nisi sit amet enim
-            hendrerit, maximus suscipit diam rutrum. Proin lacus nunc, imperdiet
-            sit amet suscipit id, gravida blandit nibh. Proin ut felis et massa
-            fermentum ultricies. Sed dictum nisl sit amet diam commodo commodo.
-          </p>
-          <p>Incomplete</p>
-          <img
-            src="images/big_lemon.png"
-            alt="project-img"
-            style="width: 300px; height: auto"
-          />
-          <button src="#" class="button-dark" id="project-button">Project on Github</button>
-        </article>
-        <article class="project-card">
-          <p>Big Lemon Restaurant</p>
-          <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-            faucibus mattis magna a volutpat. Aenean ultrices nisi sit amet enim
-            hendrerit, maximus suscipit diam rutrum. Proin lacus nunc, imperdiet
-            sit amet suscipit id, gravida blandit nibh. Proin ut felis et massa
-            fermentum ultricies. Sed dictum nisl sit amet diam commodo commodo.
-          </p>
-          <p>Incomplete</p>
-          <img
-            src="images/big_lemon.png"
-            alt="project-img"
-            style="width: 300px; height: auto"
-          />
-          <button src="#" class="button-dark" id="project-button">Project on Github</button>
-        </article>
+        <!-- Project cards will be inserted here -->
       </section>
     </main>
     <footer>
       <nav class="navigation-bar">
-        <nav class="navigation-bar">
-          <ul class="nav-list">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="project.html">Project</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="resume.html">Resume</a></li>
-          </ul>
+        <ul class="nav-list">
+          <li><a href="index.html">Musa Jalloh</a></li>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="project.html">Project</a></li>
+          <li><a href="contact.html">Contact</a></li>
+          <li><a href="resume.html">Resume</a></li>
+        </ul>
       </nav>
     </footer>
 
